Expanded Cheat Menu:
### Changed:
- Debug>Show Console is a menu item instead of just a shortcut.

Mods:

Blank Sponsor 0.3:
Forgot about pods...

Delete Object 0.2:
Works on all selectable objects.

New Nation Example:
Adds a fake nation and some names to be used with a sponsor.

Orbital Prefab Drops 1.0:
It probably didn't work correctly if dropped underground/asteroid.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", "Text", "Translation"
-302535920001745, ""
 302535920001746, ""
 302535920001747, ""
 302535920001748, ""
@@ -1221,6 +1220,8 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920001347, "Show Console"
+302535920001745, "Show the console (you can also press <sec_key>)."
 302535920001743, "Toggle Story Bit Log"
 302535920001744, "Show Storybit info in console log, and extra info in g_StoryBitsLog."
 302535920001735, "Show Console Errors"
@@ -1998,7 +1999,6 @@ Restart to set disabled."
 302535920000717, "Switch to a different commander."
 302535920000718, "Set Bonuses Commander"
 302535920001346, "Random Colour"
-302535920001347, "Show Console"
 302535920001348, "Restart"
 302535920001350, "Place Last Selected/Constructed Building"
 302535920010000, "math.%s not implemented yet."
