Expanded Cheat Menu:
### Fixed:
- I was filling Menu>Cheats>Disasters>Meteors with extra entries when using Ctrl-Shift-X.

Mods:

Realtime Autosave:
See mod options to set autosave interval in minutes, savenames will use Autosave1, Autosave2, etc
This will save the game while paused.
This ignores autosave settings in options (probably best to disable that).

Constant Disasters 0.3:
Removes leftover meteor indicators each new day.

Fix Bugs 7.9:
Key binding certain buildings won't work when pressing the key (Power Switch/Pipe Valve).

Named Workplaces 0.3:
Bumped name limit to 999.

Replace Quotes:
Replace names/quotes with other names/quotes.
By default this mod doesn't do anything, see mod options for names to replace.
Turn off mod option and restart game to reset strings.

Added so far:
Elon Musk > Nwabudike Morgan
Vladimir Putin > Nikita Khrushchev

Requests are welcome.
I speak English, so this mod only has English quotes (the info will be in the original language).
If you supply me with translated strings I can add them for your language.


github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v7.9
+Key binding certain buildings won't work when pressing the key (Power Switch/Pipe Valve).
+
 v7.8
 Log spam from borked colonist.
 
