Expanded Cheat Menu:
### Changed:
- Menu>ECM>Resources>Prefabs: Added item to add one of each prefab.
- Menu>ECM>Set Speed Drones/Rovers: Added a few more speed options.

Lib:

- GetName was having issues with g_LastBuildItem.
### Examine:
- Fixed issue displaying certain "going to" positions.

Mods:

Fix Bugs 8.1:
Added another fix for Mona Lisa Underground Rare Anomaly:
If using Paradox and you pick Shuttle Hubs, it doesn't give jumper hubs (Thanks Dark Master).

RC Miner 3.7:
Log spam.

Underground Cheats 0.7:
Colonists weren't aging (thanks crilloan).
v0.6
Added on by default option to sort elevator prefabs list by name.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001746, ""
-302535920001747, ""
 302535920001748, ""
 302535920001749, ""
 302535920001750, ""
@@ -704,6 +702,8 @@ Press Enter to refresh list (update names).
 302535920000213, "Previously set in an ECM menu (meaning it's active and the setting here will override this value)."
 302535920000158, "Consts"
 302535920000182, "The scale this amount will be multipled by when used."
+302535920001746, " One Of Each"
+302535920001747, "Add one prefab of each building."
 302535920000850, "Change Resupply Settings"
 302535920000719, "Add Orbital Probes"
 302535920000720, "Add more probes."
