--- a/Mods ChoGGi/Psychiatric Hospital/changes.txt
+++ b/Mods ChoGGi/Psychiatric Hospital/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Changed mod to treat any trait (defaults to Sanatorium traits).
+Trait mod ids have been changed, so you'll need to reset the ones you've chosen.
+
 v0.3
 Mod option for Religious.
 
