--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -249,8 +249,8 @@ It don't matter if you're black or white"
 302535920001216, "Double the battery capacity."
 302535920001217, "Double the shuttles this ShuttleHub can control."
 302535920001218, "Selects nearest storage containing specified resource (shows list of resources)."
-302535920001220, "Change this <color ChoGGi_green>%s</color> so it doesn't need a <color ChoGGi_yellow>%s</color> source."
-302535920001221, "Change this <color ChoGGi_green>%s</color> so it needs a <color ChoGGi_yellow>%s</color> source."
+302535920001220, "Make this <color ChoGGi_green><obj_name></color> ignore <color ChoGGi_yellow><grid_type></color> grids."
+302535920001221, "Make this <color ChoGGi_green><obj_name></color> use <color ChoGGi_yellow><grid_type></color> grids."
 302535920001223, "Toggle any signs above <color ChoGGi_green>%s</color> (until state is changed)."
 302535920001224, "Changes colour of <color ChoGGi_green><str></color> to random colours (doesn't change attachments)."
 302535920001225, "Adds dust and maintenance points."
