--- a/Mods ChoGGi/More Keybinds/changes.txt
+++ b/Mods ChoGGi/More Keybinds/changes.txt
@@ -1,3 +1,6 @@
+v2.0
+Added bind for toggling speeds.
+
 v1.9
 Hopefully the dialog 1234 doesn't override the set speed 1234 anymore.
 You can manually bind in options though, dialog will still work.
