--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1772,11 +1772,12 @@ Not noticeable unless using higher zoom."
 302535920001648, "If you don't want ECM to change the window title than disable this (restart to take effect)."
 302535920001634, "This mod requires my library mod (ChoGGi's Library) < use space on the end when searching for it."
 302535920000990, "You need to have a mouse to use this mod."
-302535920000887, "If you get a disabled content restrictions error: Please let me know and I'll tell Paradox (can take a few days).
+302535920000887, "If you get a disabled content restrictions error: Please let me know and I'll tell Paradox (can take a few days or weeks).
 
-If you have any issues with this mod then please send me a bug report instead of reporting the mod.
+If you have any issues with this mod then send me a bug report instead of reporting the mod to Paradox.
+https://forum.paradoxplaza.com/forum/members/choggi_2.1304787/
 https://github.com/ChoGGi/SurvivingMars_CheatMods
-Discord: https://discord.gg/ZXXYaExThy
+https://discord.gg/ZXXYaExThy
 https://steamcommunity.com/id/ChoGGi/
 SurvivingMarsMods@choggi.org"
 302535920000221, "See log for any batch errors."
