--- a/Mods ChoGGi/Elevator Tweaks/changes.txt
+++ b/Mods ChoGGi/Elevator Tweaks/changes.txt
@@ -1,3 +1,13 @@
+v0.6
+Removed some other stuff (depots/rovers/etc).
+Seems like it removed the other extra stuff from rocket resupply as well.
+
+v0.5
+Second attempt at unborking Resupply button.
+
+v0.4
+Unborked Resupply button (Thanks Dark Master).
+
 v0.3
 Removed rockets/etc from prefab list (Thanks Calvin).
 Forgot to add image to Exotic Minerals.
