--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,7 @@
+v8.6
+Changed how I check for borked cargo / fix it.
+Added image to Exotic Minerals item in elevator menu.
+
 v8.5
 Added my mods:
 Fix Unlock RC Safari Resupply
