--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,6 +1,8 @@
+v8.7
+Added my fix for multiple art suns from my Artificial Sun Range mod.
+
 v8.6
 Changed how I check for borked cargo / fix it.
-Added image to Exotic Minerals item in elevator menu.
 
 v8.5
 Added my mods:
