--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v8.9
+If you install Space Race DLC then Shuttle Hubs will disappear from build menu in existing saves.
+
 v8.8
 Toggling power to domes with passages in certain instances will create some log spam.
 
