Expanded Cheat Menu: ### Changed: Menu>Help>Mod Upload: More progress info when uploading.
Mods:

Add Rivals 0.8/Show Resource Overview 0.7:
Log spam.

Fix Bugs 9.0:
UCP: Never get funding/res points from Observatory.

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v9.0
+UCP: Never get funding/res points from Observatory.
+
 v8.9
 If you install Space Race DLC then Shuttle Hubs will disappear from build menu in existing saves.
 
