--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,7 @@
+v9.3
+Colonists underground crash v2:
+A different save and colonists on the surface stuck in underground labels (same mod option as previous fix).
+
 v9.2
 Added mod option to move any colonists underground that probably should be on the surface (or crashy).
 Removing a mod mid-gameplay that adds a tech field.
