--- a/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
+++ b/Mods ChoGGi/Passages Use Empty Hexes/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Seems to just be log spam? but if the ui for a selected passage looked odd sometimes then this is a fix for it.
+
 v1.0
 Removed some copy pasta I forgot about.
 
